[project]
name = "rsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "python-binance>=1.0.29",
    "ta-lib>=0.6.5",
    "websockets>=15.0.1",
    "websockets-proxy>=0.1.3",
    "pyyaml>=6.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "loguru>=0.7.3",
]
